added overload to send logo image

--- a/Etiqueta.NET/Properties/Resources.resx
+++ b/Etiqueta.NET/Properties/Resources.resx
@@ -121,10 +121,10 @@
   <data name="ModeloEtiquetaPAC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ModeloEtiquetaPAC.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ModeloEtiquetaCarta" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ModeloEtiquetaSedex.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ModeloEtiquetaSedex" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\modeloetiquetasedex.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ModeloEtiquetaCarta" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\modeloetiquetacarta.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
